test/errors/type_mismatch_struct_field_names.haste
const S1 = struct { x: int; y: int; };
const S2 = struct { a: int; b: int; };
const v: S2 = S1{ x: 1, y: 2 };
